mainActivity Version1